--- a/html/price.html
+++ b/html/price.html
@@ -24,20 +24,20 @@
             <div class="container">
                 <div class="header__body">
                     <div class="header__title">
-                        <a href="#" class="header__logo">
+                        <a href="../index.html" class="header__logo">
                             <h3>Психолог<br> Татьяна Соколова</h3> </a>
                     </div>
                     <nav class="header__menu">
                         <ul class="header__menu_list">
-                            <li class="header__menu_item"><a href="../index.html" target="_blank" class="header__link">главная</a></li>
-                            <li class="header__menu_item"><a href="#" target="_blank"  class="header__link">обо&nbsp;мне</a></li>
-                            <li class="header__menu_item"><a href="#" target="_blank"  class="header__link">услуги&nbsp;и&nbsp;цены</a></li>
-                            <li class="header__menu_item"><a href="#" target="_blank"  class="header__link">блог</a></li>
-                            <li class="header__menu_item"><a href="#"  target="_blank" class="header__link">faq</a></li>
-                            <li class="header__menu_item"><a href="#"  target="_blank" class="header__link">отзывы</a></li>
-                            <li class="header__menu_item"><a href="#"  target="_blank" class="header__link">договор</a></li>
-                            <li class="header__menu_item"><a href="#" target="_blank" class="header__link">контакты</a></li>
-                            <li class="header__menu_item"><a href="#" target="_blank" class="header__link">записаться</a></li>
+                            <li class="header__menu_item"><a href="../index.html" class="header__link">главная</a></li>
+                            <li class="header__menu_item"><a href="../html/about.html"   class="header__link">обо&nbsp;мне</a></li>
+                            <li class="header__menu_item"><a href="#"   class="header__link current">услуги&nbsp;и&nbsp;цены</a></li>
+                            <li class="header__menu_item"><a href="../html/blog.html"   class="header__link">блог</a></li>
+                            <li class="header__menu_item"><a href="../html/faq.html"   class="header__link">faq</a></li>
+                            <li class="header__menu_item"><a href="../html/review.html"   class="header__link">отзывы</a></li>
+                            <li class="header__menu_item"><a href="../html/dogovor.html"   class="header__link">договор</a></li>
+                            <li class="header__menu_item"><a href="../html/contacts.html" class="header__link">контакты</a></li>
+                            <li class="header__menu_item"><a href="../html/contacts.html"  class="header__link">записаться</a></li>
                         </ul>
                     </nav>
                     <button class="register">записаться</button>
